--- a/services/api/package.json
+++ b/services/api/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "google-auth-library": "^8.7.0",
     "helmet": "^6.0.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
