--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -67,7 +67,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
-    "husky": "^8.0.1",
+    "gapi-script": "^1.2.0",
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
@@ -78,6 +78,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^12.0.0",
     "react-portal": "^4.2.2",
     "react-redux": "^8.0.2",
@@ -92,7 +93,6 @@
     "wavesurfer.js": "^6.4.0"
   },
   "scripts": {
-    "prepare": "husky install",
     "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "build:docker": "docker build -t $npm_package_name .",
@@ -102,11 +102,6 @@
     "prettier": "prettier --write src",
     "lint-fix": "eslint --fix src",
     "fix": "yarn prettier && yarn lint-fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{ts,tsx}": [
