add upload and download files

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ DB_PASSWORD=testPassword
 DB_ROOT_PASSWORD=rootPassword
 API_PORT=4000
 API_PREFIX=/api
+PATH_TO_UPLOAD_FILES=/app/uploaded_files
 
 # ==== Auth config ====
 # ACCESS_TOKEN_EXPIRES_IN and REFRESH_TOKEN_EXPIRES_IN are in minutes
