--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
       - .env
     volumes:
       - ./services/api/src:/api/src
+      - uploaded_assets:${PATH_TO_UPLOAD_FILES}
     networks:
       - backend_net
     ports:
@@ -100,6 +101,7 @@ services:
 volumes:
   mysql_data:
   cache:
+  uploaded_assets:
 
 networks:
   backend_net:
