--- a/services/api/package.json
+++ b/services/api/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "google-auth-library": "^8.7.0",
     "helmet": "^6.0.0",
     "http": "0.0.1-security",
@@ -55,6 +56,7 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^28.1.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
