--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:banner="@mipmap/banner"
         android:logo="@mipmap/banner"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/banner"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileDistriTV">
