add upload download file

--- a/services/proxy/nginx.conf
+++ b/services/proxy/nginx.conf
@@ -11,6 +11,7 @@ http {
 
   server {
     listen 80;
+    client_max_body_size 100M;
     location /api {
       proxy_pass          http://api:4000/api;
     }
