--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -59,9 +59,11 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.14",
     "@reduxjs/toolkit": "^1.9.0",
     "apexcharts": "^3.36.3",
+    "axios": "^1.2.1",
     "classnames": "^2.2.6",
     "clsx": "^1.2.1",
     "env-cmd": "^10.1.0",
@@ -80,6 +82,7 @@
     "react-error-boundary": "^3.1.4",
     "react-google-login": "^5.2.2",
     "react-i18next": "^12.0.0",
+    "react-material-file-upload": "^0.0.4",
     "react-portal": "^4.2.2",
     "react-redux": "^8.0.2",
     "react-router": "^6.4.3",
