--- a/services/mobileDistriTV/app/build.gradle
+++ b/services/mobileDistriTV/app/build.gradle
@@ -40,10 +40,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
-
-
     //RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
     //RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // DI
+    implementation "io.insert-koin:koin-android:3.2.3"
 }
