--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:required="false" />
 
     <application
+        android:name=".DistriTVApp"
         android:allowBackup="true"
         android:banner="@mipmap/banner"
         android:logo="@mipmap/banner"
@@ -20,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileDistriTV">
         <activity
-            android:name=".ImageActivity"
+            android:name=".imageview.ImageActivity"
             android:theme="@style/Theme.AppCompat"
             android:exported="false">
             <meta-data
