--- a/services/mobileDistriTV/app/build.gradle
+++ b/services/mobileDistriTV/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
 
     // DI
     implementation "io.insert-koin:koin-android:3.2.3"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 }
