--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="com.google.android.assistant.READ_HOTWORD_STATE" />
+    <uses-permission android:name="com.google.android.assistant.WRITE_HOTWORD_STATE" />
 
     <uses-feature android:name="android.software.leanback" />
     <uses-feature
@@ -29,7 +31,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".home.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
