--- a/services/mobileDistriTV/app/build.gradle
+++ b/services/mobileDistriTV/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+
 android {
     namespace 'com.distritv'
     compileSdk 32
@@ -26,9 +27,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
+
 dependencies {
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.leanback:leanback:1.0.0'
@@ -49,4 +54,31 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.2.3"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+
+
+    // ExoPlayer
+    //implementation group: 'com.devbrackets.android', name: 'exomedia', version: '5.0.0'
+    //implementation 'com.devbrackets.android:exomedia:4.3.0'
+
+
+    // Playlist support
+  //  implementation 'com.devbrackets.android:playlistcore:2.1.0'
+   // implementation 'androidx.media:media:1.6.0'
+
+
+    //implementation "androidx.media3:media3-ui:1.0.0-beta01" // Subtitles
+   // implementation "androidx.media3:media3-datasource-okhttp:1.0.0-beta01" // Custom HTTP
+
+
+
+
+    // https://mvnrepository.com/artifact/com.devbrackets.android/exomedia
+   // implementation("com.devbrackets.android:exomedia:4.3.0")
+
+   // implementation 'com.devbrackets.android:playlistcore:2.1.0'
+
+   // implementation 'com.github.bumptech.glide:glide:4.14.2'
+  //  annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
 }
