--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -17,21 +17,21 @@
         android:name=".DistriTVApp"
         android:allowBackup="true"
         android:banner="@mipmap/banner"
-        android:logo="@mipmap/banner"
         android:icon="@mipmap/banner"
         android:label="@string/app_name"
+        android:logo="@mipmap/banner"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileDistriTV">
         <activity
-            android:name=".imageview.ImageActivity"
-            android:theme="@style/Theme.AppCompat"
-            android:exported="false">
+            android:name=".ui.image.ImageActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".home.HomeActivity"
+            android:name=".ui.home.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
@@ -40,6 +40,14 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.video.VideoPlaybackActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
