--- a/services/mobileDistriTV/settings.gradle
+++ b/services/mobileDistriTV/settings.gradle
@@ -3,13 +3,15 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        jcenter()
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    //repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 rootProject.name = "mobileDistriTV"
