--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:label="@string/app_name"
         android:logo="@mipmap/banner"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileDistriTV">
+        android:theme="@style/Theme.MobileDistriTV"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.image.ImageActivity"
             android:exported="false"
