--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="com.google.android.assistant.WRITE_HOTWORD_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <uses-feature android:name="android.software.leanback" />
     <uses-feature
@@ -49,6 +50,7 @@
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true"
+            android:enabled="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -68,14 +70,14 @@
                 android:value="" />
         </activity>
 
-        <receiver
-            android:name=".bootup.BootUpReceiver"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
 
+
+        <receiver android:name=".bootup.ScheduleReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <action android:name="android.intent.action.ACTION_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.REBOOT" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
