--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -33,6 +33,14 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".ui.text.TextActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar">
