--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         android:theme="@style/Theme.MobileDistriTV"
         android:usesCleartextTraffic="true">
         <service
+            android:name=".bootup.AlarmRescheduleService"
+            android:enabled="true"
+            android:exported="true"/>
+        <service
             android:name=".bootup.RequestService"
             android:enabled="true"
             android:exported="true" />
@@ -49,14 +53,15 @@
         </activity>
         <activity
             android:name=".ui.home.HomeActivity"
-            android:exported="true"
             android:enabled="true"
+            android:exported="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -70,14 +75,13 @@
                 android:value="" />
         </activity>
 
-
-
-        <receiver android:name=".bootup.ScheduleReceiver"
+        <receiver
+            android:name=".bootup.BootUpReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-
                 <action android:name="android.intent.action.ACTION_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.REBOOT" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
@@ -88,6 +92,10 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </receiver>
+        <receiver
+            android:name=".bootup.ScheduleReceiver"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
