--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -56,6 +56,7 @@
     "@casl/ability": "^6.3.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^3.0.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
@@ -81,6 +82,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.43.9",
     "react-i18next": "^12.0.0",
     "react-material-file-upload": "^0.0.4",
     "react-portal": "^4.2.2",
@@ -93,7 +95,8 @@
     "redux-observable": "^2.0.0",
     "redux-persist": "^6.0.0",
     "rxjs": "^7.5.6",
-    "wavesurfer.js": "^6.4.0"
+    "wavesurfer.js": "^6.4.0",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.js",
