--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -80,6 +80,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-error-boundary": "^3.1.4",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
