feature add 'update content', add garbage collector, features schedule cron and others (#13)
* feature update content, add garbage collector, features schedule

* change property name cleaner -> gc (garbage collector)

* merge main into DDCC59_cron_delete_content

* fix id device visibility

--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -1,5 +1,6 @@
-#base_url_local=http://10.0.2.2/api/v1/
-base_url_local=https://textcontent.free.beeceptor.com/
+base_url_local=http://10.0.2.2/api/v1/
+#base_url_local=https://textcontent.free.beeceptor.com/
 base_url_prod=http://triactivesoft.ddns.net/api/v1/
 request_time_period_in_seconds=30
 schedule_time_period_in_seconds=10
+gc_time_period_in_seconds=30
