--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -54,12 +54,14 @@
   },
   "dependencies": {
     "@casl/ability": "^6.3.2",
+    "@date-io/date-fns": "1.3.13",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^3.0.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.14",
     "@reduxjs/toolkit": "^1.9.0",
@@ -67,6 +69,7 @@
     "axios": "^1.2.1",
     "classnames": "^2.2.6",
     "clsx": "^1.2.1",
+    "date-fns": "^2.22.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
