still and still fixing linter

--- a/.github/workflows/backend_integration_tests.yml
+++ b/.github/workflows/backend_integration_tests.yml
@@ -30,8 +30,7 @@ jobs:
       working-directory: services/api
 
     - name: Check API status
-      run: docker-compose logs api && yarn test
-      working-directory: services/api
+      run: docker-compose logs api
 
     - name: Run tests
       run: yarn test
