--- a/.github/workflows/linter_frontend.yml
+++ b/.github/workflows/linter_frontend.yml
@@ -9,12 +9,17 @@ jobs:
     name: run lint
     timeout-minutes: 30
     runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+
     - name: Install node
       uses: actions/setup-node@v1
       with:
         node-version: 18.x
 
-    - name: Install frontend dependencies
+    - name: Install api dependencies
       run: yarn
       working-directory: services/dashboard
 
