fix github pipelines (#16)
* fix github pipelines

* still fixing pipelines 🛠️

* still and still fixing linter

* fix lint and improve readme

---------

Co-authored-by: liveonit <ibarreotrey@gmail.com>

--- a/.github/workflows/linter_backend.yml
+++ b/.github/workflows/linter_backend.yml
@@ -5,6 +5,15 @@ on:
     branches: ['main']
 
 jobs:
+  linter_backend:
+    name: run lint
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+
     - name: Install node
       uses: actions/setup-node@v1
       with:
