--- a/.github/workflows/backend_integration_tests.yml
+++ b/.github/workflows/backend_integration_tests.yml
@@ -29,8 +29,11 @@ jobs:
       run: yarn
       working-directory: services/api
 
-    - name: Check API status and run tests
-      run: docker-compose logs api && yarn test
+    - name: Check API status
+      run: docker-compose logs api
+
+    - name: Run tests
+      run: yarn test
       working-directory: services/api
 
     - name: Stop containers
