--- a/.github/workflows/linter_backend.yml
+++ b/.github/workflows/linter_backend.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   linter_backend:
-    name: run lint
+    name: linter backend
     timeout-minutes: 30
     runs-on: ubuntu-latest
     
