--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -1,6 +1,6 @@
-base_url_local=http://10.0.2.2/api/v1/
-#base_url_local=https://textcontent.free.beeceptor.com/
-base_url_prod=http://triactivesoft.ddns.net/api/v1/
+#base_url_debug=http://10.0.2.2/api/v1/
+base_url_debug=https://mrt-proy1.free.beeceptor.com/
+base_url_release=http://triactivesoft.ddns.net/api/v1/
 request_time_period_in_seconds=30
 schedule_time_period_in_seconds=10
-gc_time_period_in_seconds=30
+garbage_collector_time_period_in_seconds=30
