androidApp: add comments in config.prop

--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -1,6 +1,16 @@
-#base_url_debug=http://10.0.2.2/api/v1/
-base_url_debug=https://mrt-proy1.free.beeceptor.com/
+# If built with debug build variant:
+base_url_debug=http://10.0.2.2/api/v1/
+
+# If built with release build variant:
 base_url_release=http://triactivesoft.ddns.net/api/v1/
+
+# Period of time in which requests to the server are executed:
 request_time_period_in_seconds=30
+
+# Period of time in which it is verified if there is
+# content to be played soon, where the reproduction is scheduled:
 schedule_time_period_in_seconds=10
+
+# Period of time when contents are inactivated
+# and files that are no longer used are deleted:
 garbage_collector_time_period_in_seconds=30
