--- a/services/mobileDistriTV/app/build.gradle
+++ b/services/mobileDistriTV/app/build.gradle
@@ -8,7 +8,7 @@ Properties props = new Properties()
 try {
     props.load(file('../config.properties').newDataInputStream())
 } catch (Exception ex) {
-    throw new GradleException("Missing keys.properties file.");
+    throw new GradleException("Missing config.properties file.");
 }
 
 android {
@@ -38,19 +38,19 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "BASE_URL", "\"${props.getProperty("base_url_local")}\""
+            buildConfigField "String", "BASE_URL", "\"${props.getProperty("base_url_debug")}\""
             buildConfigField "Long", "REQUEST_TIME_PERIOD", "${props.getProperty("request_time_period_in_seconds")}L"
             buildConfigField "Long", "SCHEDULE_TIME_PERIOD", "${props.getProperty("schedule_time_period_in_seconds")}L"
-            buildConfigField "Long", "GARBAGE_COLLECTOR_TIME_PERIOD", "${props.getProperty("gc_time_period_in_seconds")}L"
+            buildConfigField "Long", "GARBAGE_COLLECTOR_TIME_PERIOD", "${props.getProperty("garbage_collector_time_period_in_seconds")}L"
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig debug.signingConfig
-            buildConfigField "String", "BASE_URL", "\"${props.getProperty("base_url_prod")}\""
+            buildConfigField "String", "BASE_URL", "\"${props.getProperty("base_url_release")}\""
             buildConfigField "Long", "REQUEST_TIME_PERIOD", "${props.getProperty("request_time_period_in_seconds")}L"
             buildConfigField "Long", "SCHEDULE_TIME_PERIOD", "${props.getProperty("schedule_time_period_in_seconds")}L"
-            buildConfigField "Long", "GARBAGE_COLLECTOR_TIME_PERIOD", "${props.getProperty("gc_time_period_in_seconds")}L"
+            buildConfigField "Long", "GARBAGE_COLLECTOR_TIME_PERIOD", "${props.getProperty("garbage_collector_time_period_in_seconds")}L"
         }
     }
 
