--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
-            android:name=".ui.HomeActivity"
+            android:name=".ui.home.HomeActivity"
             android:enabled="true"
             android:exported="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar">
@@ -35,6 +35,16 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".ui.player.ContentPlayerActivity"
+            android:enabled="true"
+            android:exported="true"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
