androidApp: change in requests and response processing
- separate content and schedule (in  data class and BD)
- add device id in request
- adaptation in contentschedule and garbage collector daemons
- other improvements

--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
         </service>
 
         <service
-            android:name=".daemon.ContentRequestDaemon"
+            android:name=".daemon.RequestDaemon"
             android:label="Daemon Request Service"
             android:enabled="true"
             android:exported="true" />
