--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -1,5 +1,7 @@
 # If built with debug build variant:
 base_url_debug=http://10.0.2.2/api/v1/
+#base_url_debug=http://10.0.2.2:3090/api/v1/
+#base_url_debug=https://pruebamrt3.free.beeceptor.com/
 
 # If built with release build variant:
 base_url_release=http://triactivesoft.ddns.net/api/v1/
