--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -61,15 +61,16 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.14",
+    "@mui/x-date-pickers": "^6.3.0",
     "@reduxjs/toolkit": "^1.9.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "classnames": "^2.2.6",
     "clsx": "^1.2.1",
     "date-fns": "^2.22.1",
+    "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
     "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
