--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ services/mobileDistriTV/.idea/workspace.xml
 services/mobileDistriTV/.idea/navEditor.xml
 services/mobileDistriTV/.idea/assetWizardSettings.xml
 services/mobileDistriTV/.idea/deploymentTargetDropDown.xml
+node_modules
+dist
