--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,14 @@ services:
       - backend_net
     ports:
       - "${API_PORT}:${API_PORT}"
+    deploy:
+      resources:
+        limits:
+          cpus: '2.00'
+          memory: 4096M
+        reservations:
+          cpus: '2.00'
+          memory: 4096M
 
   dashboard:
     image: ${PROJECT_NAME}-dashboard
