add external storage switch and android 10 or higher compatible

--- a/services/mobileDistriTV/app/build.gradle
+++ b/services/mobileDistriTV/app/build.gradle
@@ -43,6 +43,7 @@ android {
             buildConfigField "Long", "SCHEDULE_TIME_PERIOD", "${props.getProperty("schedule_time_period_in_seconds")}L"
             buildConfigField "Long", "GARBAGE_COLLECTOR_TIME_PERIOD", "${props.getProperty("garbage_collector_time_period_in_seconds")}L"
             buildConfigField "Long", "START_DOWNLOAD_RESTRICTION", "${props.getProperty("start_download_restriction")}L"
+            buildConfigField "Boolean", "EXTERNAL_STORAGE_ENABLED", "${props.getProperty("external_storage_enabled")}"
         }
         release {
             minifyEnabled false
@@ -53,6 +54,7 @@ android {
             buildConfigField "Long", "SCHEDULE_TIME_PERIOD", "${props.getProperty("schedule_time_period_in_seconds")}L"
             buildConfigField "Long", "GARBAGE_COLLECTOR_TIME_PERIOD", "${props.getProperty("garbage_collector_time_period_in_seconds")}L"
             buildConfigField "Long", "START_DOWNLOAD_RESTRICTION", "${props.getProperty("start_download_restriction")}L"
+            buildConfigField "Boolean", "EXTERNAL_STORAGE_ENABLED", "${props.getProperty("external_storage_enabled")}"
         }
     }
 
