--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -18,3 +18,6 @@ garbage_collector_time_period_in_seconds=30
 
 # Time restriction in days prior to content download
 start_download_restriction=7
+
+# If the use of external storage is enabled
+external_storage_enabled=true
