--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
         </receiver>
 
         <receiver
-            android:name=".daemon.ContentPlaybackLauncher"
+            android:name=".launcher.ContentPlaybackLauncher"
             android:enabled="true"
             android:exported="true" />
 
