--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -65,6 +65,7 @@
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^6.3.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "antd": "^5.6.4",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "classnames": "^2.2.6",
@@ -89,6 +90,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.0.0",
+    "react-js-cron": "^4.0.0",
     "react-material-file-upload": "^0.0.4",
     "react-portal": "^4.2.2",
     "react-redux": "^8.0.2",
