--- a/infra/deployments/rook-manifests/object-test.yaml
+++ b/infra/deployments/rook-manifests/object-test.yaml
@@ -6,7 +6,7 @@
 apiVersion: ceph.rook.io/v1
 kind: CephObjectStore
 metadata:
-  name: my-store
+  name: distritv
   namespace: rook-ceph # namespace:cluster
 spec:
   metadataPool:
