--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   nginx:
     image: nginx:1.15.1
-    container_name: proxy
+    container_name: ${PROJECT_NAME}-proxy
     restart: unless-stopped
     volumes:
       - ./services/proxy/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -37,6 +37,7 @@ services:
     image: redis
     restart: always
     command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    container_name: ${PROJECT_NAME}-redis
     volumes:
       - cache:/data
     networks:
