--- a/.github/workflows/linter_frontend.yml
+++ b/.github/workflows/linter_frontend.yml
@@ -2,14 +2,14 @@ name: linter_frontend
 
 on:
   pull_request:
-    branches: ['main']
+    branches: ['main', 'development']
 
 jobs:
   linter_frontend:
     name: linter frontend
     timeout-minutes: 30
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v1
