--- a/.github/workflows/backend_integration_tests.yml
+++ b/.github/workflows/backend_integration_tests.yml
@@ -2,7 +2,7 @@ name: backend_integration_tests
 
 on:
   pull_request:
-    branches: ['main']
+    branches: ['main', 'development']
 
 jobs:
   backend_integration_tests:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Create .env
       run: cp .env.example .env
@@ -39,3 +39,25 @@ jobs:
     - name: Stop containers
       if: always()
       run: docker-compose -f "docker-compose.yml" down
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./services/api
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/distritv-api:development,${{ secrets.DOCKERHUB_USERNAME }}/distritv-api:${{ github.sha }}
+        file: Dockerfile.development
