--- a/infra/deployments/node-app-chart/values.yaml
+++ b/infra/deployments/node-app-chart/values.yaml
@@ -122,8 +122,8 @@ Env: |
 
 livenessProbe: |
   httpGet:
-    path: /health
-    port: 8080
+    path: /api/v1/health
+    port: 4000
   initialDelaySeconds: 400
   periodSeconds: 5
   successThreshold: 1
@@ -133,8 +133,8 @@ livenessProbe: |
 # Readiness probe configuration
 readinessProbe: |
   httpGet:
-    path: /health
-    port: 8080
+    path: /api/v1/health
+    port: 4000
   initialDelaySeconds: 30
   timeoutSeconds: 1
 
