--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -16,8 +16,8 @@ schedule_time_period_in_seconds=10
 # and files that are no longer used are deleted:
 garbage_collector_time_period_in_seconds=45
 
-# Time restriction in days prior to content download
-start_download_restriction=7
+# Amount of days in advance to download content (list separated by semicolon)
+anticipation_days=7;15;30
 
 # If the use of external storage is enabled
 external_storage_enabled=true
