--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ REFRESH_TOKEN_PUBLIC_KEY=LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUZ3d0RRWUpLb1pJaHZ
 GOOGLE_CLIENT_ID=1009712653750-1kd18n9tkeh51b5201idvblgv520ocop.apps.googleusercontent.com
 
 # ==== Redis config ====
-REDIS_ENABLED=false
+REDIS_ENABLED=true
 REDIS_HOST=cache
 REDIS_PORT=6379
 REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
