--- a/services/dashboard/Dockerfile.production
+++ b/services/dashboard/Dockerfile.production
@@ -1,14 +1,11 @@
 FROM node:18-alpine as build-stage
 
-RUN apk add g++ make py3-pip
+# RUN apk add g++ make py3-pip
 
 WORKDIR /app
-COPY ./ /app/
+COPY . .
 RUN yarn
-RUN yarn test
-RUN yarn build --prod
-
+RUN yarn build
 
 FROM nginx:latest
-
 COPY --from=build-stage /app/docs/ /usr/share/nginx/html
