remove docs, build front to dist folder

--- a/services/dashboard/Dockerfile.production
+++ b/services/dashboard/Dockerfile.production
@@ -8,4 +8,4 @@ RUN yarn
 RUN yarn build
 
 FROM nginx:latest
-COPY --from=build-stage /app/docs/ /usr/share/nginx/html
+COPY --from=build-stage /app/dist/ /usr/share/nginx/html
