--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -61,7 +61,6 @@ services:
 
   api:
     image: ${DOCKER_OWNER}/${PROJECT_NAME}-api
-    container_name: ${PROJECT_NAME}-api
     build:
       context: ./services/api
       dockerfile: Dockerfile.production
@@ -78,16 +77,15 @@ services:
       - uploaded_assets:${PATH_TO_UPLOAD_FILES}
     networks:
       - backend_net
-    ports:
-      - "${API_PORT}:${API_PORT}"
     deploy:
+      replicas: 4
       resources:
         limits:
           cpus: '2.00'
           memory: 4096M
         reservations:
-          cpus: '2.00'
-          memory: 4096M
+          cpus: '1.00'
+          memory: 1024M
 
   dashboard:
     image: ${DOCKER_OWNER}/${PROJECT_NAME}-dashboard
