to test pipelines and production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # ==== Global config ====
 PROJECT_NAME=distritv
 ENVIRONMENT=development
-
+DOCKER_OWNER=liveonit
 # ==== API config ====
 DB_HOST=db
 DB_VENDOR=mysql
