--- a/services/api/Dockerfile.production
+++ b/services/api/Dockerfile.production
@@ -1,7 +1,9 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
+COPY package*.json ./
+COPY yarn.lock ./
+RUN yarn
 COPY . .
-RUN yarn install
 RUN yarn build
 
 FROM node:18-alpine AS final
