--- a/services/dashboard/.dockerignore
+++ b/services/dashboard/.dockerignore
@@ -20,14 +20,10 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
+build
+dist
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules*
 kubernetes
-
-#Project folders
-docs
-dist
 
